# qt5-test

./: CMakeLists.txt  README  README.md  docker.sh  mainwindow.cpp  mainwindow.h
